cmake_minimum_required(VERSION 3.23)
project(Tel_102_CPP_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tel_102_CPP_ Extra/Hello-World.cpp)

add_executable(choripan Extra/Choripan/choripan.cpp)
add_executable(Minero Extra/Mineros/Minero.cpp)
add_executable(sumando-enteros Extra/Sumando-Enteros/sumando-enteros.cpp)
add_executable(tropa-104 "Extra/Tropa 104/tropa-104.cpp")
add_executable(Hello-World Extra/Hello-World.cpp)
add_executable(calculadora Extra/calculadora/calculadora.cpp)
add_executable(practico-1 Clase/C1/practico-1-2016/practico-1.cpp)
add_executable(ej-1 Clase/Ayudantias/1/ej-1.cpp)
add_executable(ej-2 Clase/Ayudantias/1/ej-2.cpp)

add_executable(problema-1_1 Clase/Ayudantias/1/problema-1_1.cpp)
add_executable(desafio Clase/Ayudantias/1/desafio.cpp)