cmake_minimum_required(VERSION 3.23)
project(Tel_102_CPP_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tel_102_CPP_ Extra/Hello-World.cpp)

add_executable(choripan Extra/Choripan/choripan.cpp)
add_executable(Minero Extra/Mineros/Minero.cpp)
add_executable(sumando-enteros Extra/Sumando-Enteros/sumando-enteros.cpp)
add_executable(tropa-104 "Extra/Tropa 104/tropa-104.cpp")
add_executable(Hello-World Extra/Hello-World.cpp)
add_executable(calculadora Extra/calculadora/calculadora.cpp Clase/C2/fighter.cpp Clase/C2/C2-2021-cssj/matchmaking.cpp)
add_executable(practico-1 Clase/C1/practico-1-2016/practico-1.cpp)
add_executable(ej-1 Clase/Ayudantias/1/ej-1.cpp)
add_executable(ej-2 Clase/Ayudantias/1/ej-2.cpp)

add_executable(problema-1_1 Clase/Ayudantias/1/problema-1_1.cpp)
add_executable(desafio Clase/Ayudantias/1/desafio.cpp)
add_executable(src "Clase/C1/C1 2021/src.cpp")

add_executable(TE-102-C1-Benjamin-Munoz Clase/C1/C1-2022/TEL-102-C1-Benjamin-Munoz.cpp)
add_executable(mesas Clase/C2/C2-2020-cssj/mesas.cpp)
add_executable(matchmaking Clase/C2/C2-2021-cssj/matchmaking.cpp)